Margin fixes on mobile

--- a/src/assets/styles/components/_postContent.scss
+++ b/src/assets/styles/components/_postContent.scss
@@ -23,3 +23,11 @@
         }
     }
 }
+
+//** MEDIA QUERIES **//
+@media (max-width: 420px) {
+    .date {
+        flex-direction: column;
+    }
+}
+  
