--- a/src/assets/styles/pages/postpage.scss
+++ b/src/assets/styles/pages/postpage.scss
@@ -16,6 +16,10 @@
     .content {
         padding: 0 3rem 0 3rem;
     }
+
+    h2 {
+        font-size: 2rem;
+    }
 }
 
 //** MEDIA QUERIES **//
@@ -25,7 +29,7 @@
         flex-direction: column;
         padding: 0rem 1rem 0 1rem;
 
-        main { 
+        .content { 
             padding: 0px;
         }
     }
